# funrec

./: pyproject.toml
src/funrec/: utils.py
src/funrec/callbacks/: checkpoint.py
src/funrec/inputs/: core.py
src/funrec/models/b2000/: base.py
src/funrec/models/p2019/ifm/: code.py
src/funrec/models/p2020/difm/: code.py
